Update dialog open transition

--- a/client/public/assets/css/general.css
+++ b/client/public/assets/css/general.css
@@ -31,3 +31,7 @@ body {
 html {
   line-height: 1.5;
 }
+
+.h-dialog-enter-active {
+    transition: all 0.25s cubic-bezier(0.34, 1.56, 0.64, 1);
+}
