--- a/client/public/assets/css/general.css
+++ b/client/public/assets/css/general.css
@@ -24,6 +24,11 @@ body, h1, h2, h3, h4, h5, h6, hr, p, pre {
   margin: 0;
 }
 
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
 body {
   color: var(--text-color);
 }
