Fix style and add spinner

--- a/client/public/assets/css/dark-theme-custom.css
+++ b/client/public/assets/css/dark-theme-custom.css
@@ -1013,3 +1013,8 @@ hr {
   background-color: var(--pink-500);
   color: #fff;
 }
+
+.p-progress-spinner-circle {
+  animation: p-progress-spinner-dash 1.5s ease-in-out infinite;
+  stroke: var(--text-color);
+}
