--- a/client/public/assets/css/dark-theme-custom.css
+++ b/client/public/assets/css/dark-theme-custom.css
@@ -1022,3 +1022,7 @@ hr {
   animation: p-progress-spinner-dash 1.5s ease-in-out infinite;
   stroke: var(--text-color);
 }
+
+hr {
+  border-color: var(--surface-a);
+}
