Unique mail template with basic i18n

--- a/dev/templates/ResetPasswordRequest.html
+++ b/dev/templates/ResetPasswordRequest.html
@@ -86,7 +86,7 @@
         .inner-footer {
             font-family: 'Red Hat Text', sans-serif;
             font-size: 16px;
-            line-height: 1.5;
+            line-height: 1.25;
             background-color: #f6f9fc;
             color: #708da9;
             padding: 16px;
@@ -116,16 +116,6 @@
     </style>
 </head>
 <body>
-<style>
-    @media only screen and (max-width: 456px) {
-        .inner-header,
-        .inner-body,
-        .inner-footer {
-            width: 100%;
-            margin: 0;
-        }
-    }
-</style>
 
 <table class="wrapper" cellpadding="0" cellspacing="0">
     <tr>
@@ -140,7 +130,7 @@
                                     <table cellpadding="0" cellspacing="0">
                                         <tr style="height: 16px;"></tr>
                                         <tr>
-                                            <td><img src="http://localhost:3000/favicon.svg" alt="Hedera logo"
+                                            <td><img src="${URL}/favicon.svg" alt="Hedera logo"
                                                      width="38px" height="38px"></td>
                                             <td width="8px"></td>
                                             <td><h1 style="font-weight: 500; font-size: 2.5em;">Hedera</h1></td>
@@ -163,37 +153,32 @@
                         <table class="inner-body">
                             <tr>
                                 <td>
-                                    <h2 style="margin-bottom: 8px; font-size: 22px; font-weight: 500;">Reset your
-                                        password</h2>
+                                    <h2 style="margin-bottom: 8px; font-size: 22px; font-weight: 500;">${subject}</h2>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <p style="margin-bottom: 4px;">Hi ${username},</p>
+                                    <p style="margin-bottom: 4px;">${greetings}</p>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <p style="margin-bottom: 4px;">You recently requested to reset your password for
-                                        your Hedera account. If this wasn't you, please ignore this email.</p>
+                                    <p style="margin-bottom: 4px;">${paragraph1}</p>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <p style="margin-bottom: 4px;">You can reset your password by clicking the button
-                                        below:</p>
+                                    <p style="margin-bottom: 4px;">${paragraph2}</p>
                                 </td>
                             </tr>
                             <tr>
                                 <td align="center">
-                                    <a href="${URL}/reset-password?token=${token}" class="action-button">Reset
-                                        password</a>
+                                    <a href="${URL}/reset-password?token=${token}" class="action-button">${button}</a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <p style="margin-bottom: 4px;">Or, you can copy and paste the following reset key
-                                        into the reset password form:</p>
+                                    <p style="margin-bottom: 4px;">${paragraph3}</p>
                                 </td>
                             </tr>
                             <tr>
@@ -203,12 +188,12 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <p style="margin-bottom: 4px;">The reset key is valid for 10 minutes only.</p>
+                                    <p style="margin-bottom: 4px;">${paragraph4}</p>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <p style="margin-top: 8px;">Regards,</p>
+                                    <p style="margin-top: 8px;">${salutations}</p>
                                     <p>Hedera</p>
                                 </td>
                             </tr>
@@ -227,17 +212,12 @@
                         <table class="inner-footer">
                             <tr>
                                 <td>
-                                    <small>
-                                        This email was sent to ${email}. If you think you've received this email by
-                                        mistake, please ignore it and delete it.
-                                    </small>
+                                    <small>${footer1}</small>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <small>
-                                        This email was sent automatically, please don't reply to this email.
-                                    </small>
+                                    <small>${footer2}</small>
                                 </td>
                             </tr>
                         </table>
