--- a/dev/templates/ResetPasswordRequest.html
+++ b/dev/templates/ResetPasswordRequest.html
@@ -49,6 +49,7 @@
         body {
             min-width: 100%;
             padding: 0;
+            color: #043d75;
         }
 
         .wrapper {
@@ -56,6 +57,7 @@
             height: 100%;
             min-width: 100%;
             background-color: white;
+            color: #043d75;
         }
 
         .content {
